--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
@@ -53,5 +54,6 @@
   },
   "devDependencies": {
     "node-sass": "^7.0.1"
-  }
+  },
+  "proxy": "http://127.0.0.1:8000/"
 }
