--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Django #
 *.log
 *.pot
@@ -6,6 +5,7 @@
 __pycache__
 db.sqlite3
 media
+migrations
 
 # Backup files # 
 *.bak 
@@ -136,6 +136,3 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
-=======
-node_modules
->>>>>>> 8591895ae41eb74ecb677ed68082115101f00015
